--- a/GD.FinishingSystem.WEB/Views/RuloProcess/GetRulo.cshtml
+++ b/GD.FinishingSystem.WEB/Views/RuloProcess/GetRulo.cshtml
@@ -102,10 +102,10 @@
             @Html.DisplayFor(model => model.TestCategoryCode)
         </dd>
         <dt class="col-sm-4">
-            @Html.DisplayNameFor(model => model.Origin)
+            @Html.DisplayNameFor(model => model.OriginCode)
         </dt>
         <dd class="col-sm-6">
-            @Html.DisplayFor(model => model.Origin)
+            @Html.DisplayFor(model => model.OriginCode)
         </dd>
         <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.RuloObservations)
