--- a/GD.FinishingSystem.WEB/Views/Rulo/Delete.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Rulo/Delete.cshtml
@@ -105,10 +105,10 @@
             @Html.DisplayFor(model=> model.IsWaitingAnswerFromTest)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Origin)
+            @Html.DisplayNameFor(model => model.OriginCode)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Origin)
+            @Html.DisplayFor(model => model.OriginCode)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.RuloObservations)
