--- a/GD.FinishingSystem.WEB/Views/Rulo/Index.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Rulo/Index.cshtml
@@ -20,7 +20,7 @@
 {
 <p>
     <a onclick="validateCreateRulo()" class="btn btn-sm btn-outline-light border-dark btn-dark">
-        <i class="lni lni-circle-plus"></i> Create New
+        <i class="lni lni-circle-plus"></i> Create Rulo Reprocess
     </a>
 
     @*        <a asp-action="Create" class="btn btn-sm btn-outline-light border-dark btn-dark">
@@ -137,6 +137,10 @@
             <th colspan="16">
                 <div>
                     Rulo List
+                    @if (User.IsInRole("Authorize", AuthType.Full))
+                    {
+                        <a onclick="exportToWarehouseStock();" class="btn btn-sm btn-info"><i class="far fa-file-excel"></i> Warehouses Stock</a>
+                    }
                     <a id="btnExportToExcel" onclick="exportToExcel();" class="btn btn-sm btn-success"><i class="far fa-file-excel"></i> Export to Excel</a>
                     <Label><input id="chkWithBatchesTmp" type="checkbox" name="chkWithBatchesTmp" onclick="chageWithBatches();" />Report with Batches</Label>
                     @if (User.IsInRole("Authorize", AuthType.Full))
@@ -176,7 +180,7 @@
                 @Html.DisplayNameFor(model => model.VMRuloList[0].Machine)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.VMRuloList[0].Origin)
+                @Html.DisplayNameFor(model => model.VMRuloList[0].OriginCode)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.VMRuloList[0].WeavingLength)
@@ -402,7 +406,7 @@
                 </div>
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Origin)
+                @Html.DisplayFor(modelItem => item.OriginCode)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.WeavingLength)
@@ -678,10 +682,8 @@
     document.getElementById("isAccountingDate").value = '@ViewBag.isAccountingDate';
 
     var isAccountValue = '@ViewBag.isAccountingDate' == 'True' ? true : false;
-
     document.getElementById("RealDate").checked = !isAccountValue;
     document.getElementById("AccountingDate").checked = isAccountValue;
-    @*NO ES NECESARIO PASAR A ALGÚN CONTROL accountingDate y realDate SÓLO SE MANTIENE EL VALOR EN EL VIEW BAG PARA CUANDO SEA REQUERIDO*@
 
     document.getElementById("numLote").value = '@ViewBag.numLote';
     document.getElementById("numBeam").value = '@ViewBag.numBeam';
@@ -1143,6 +1145,36 @@
     function setIndex() {
         document.getElementById("formFilters").action = "/Rulo/Index";
         document.getElementById("formFilters").submit();
+    }
+
+    function exportToWarehouseStock(){
+        $("#divLoader").show();
+
+        // Enviar la solicitud Ajax
+        $.ajax({
+            url: 'Rulo/ExportToWarehouseStock',
+            method: 'POST',
+            processData: false,
+            xhrFields: {
+              responseType: 'blob'
+            },
+            data: $('#formFilters').serialize(),
+            success: function (response, status, xhr) {
+            // Manejar la respuesta del servidor
+                $("#divLoader").hide();
+                var fileName = xhr.getResponseHeader('Content-Disposition').match(/filename="(.+)"/)[1];
+                var url = URL.createObjectURL(response);
+                var a = document.createElement("a");
+                a.href = url;
+                a.download = fileName;
+                a.click();
+            },
+            error: function(xhr, status, error) {
+            // Manejar el error de la solicitud
+            $("#divLoader").hide();
+                alert("Something went wrong!");
+            }
+        });
     }
 
     function exportToExcel() {
